--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -247,9 +247,9 @@
                 data: formData
             }).done(function (ketqua) {
                 if (ketqua == "Success") {
-                    swal('Good Job', 'Báo cáo tháng thành công', 'success');
+                    swal('Thành công', 'Báo cáo tháng thành công', 'success');
                 } else {
-                    swal('Good Job', 'Báo cáo không thành công', 'error');
+                    swal('Thất bại', 'Báo cáo không thành công', 'error');
                 }
             });
         }
