--- a/MonthlyStatement/Areas/Admin/Views/YearReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/YearReport/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <div class="card">
                         <div class="card-header bg-primary" style="height:100px">
-                            <h4 class="text-white" style="font-size:1.75rem">Báo cáo năm</h4>
+                            <h4 class="text-white" style="font-size:1.75rem">Quản lý các năm báo cáo</h4>
                         </div>
                     </div>
                     @if (Convert.ToBoolean(Session["ReportYear-Check"]) == true)
