--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MonthlyStatement.Models.Profile>
+﻿@model MonthlyStatement.Models.Faculty
 
 @{
     int i = 0;
@@ -15,14 +15,14 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h3 class="text-white" style="font-size:1.75rem">Danh sách thành viên</h3>
+                        <h3 class="text-white" style="font-size:1.75rem">Danh sách thành viên của khoa @Model.faculty_name</h3>
                     </div>
                     <div class="card-body">
                         <div class="col-sm-12 buttons">
-                            <a style="color:white" type="button" class="btn btn-primary btn-round" href="#">
+                            <button style="color:white" data-toggle="modal" class="btn btn-primary btn-round" data-target="#addUser">
                                 <i class="fa fa-plus"></i>
                                 Thêm thành viên
-                            </a>
+                            </button>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped" id="table-1">
@@ -52,7 +52,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model)
+                                    @foreach (var item in Model.Profiles)
 
                                     {
                                         i = i + 1;
@@ -122,3 +122,76 @@
         </div>
     </div>
 </section>
+<div class="modal fade" id="addUser" tabindex="-1" role="dialog" aria-labelledby="formModal"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="formModal">Chỉnh sửa thông tin</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            @using (Html.BeginForm("Edit_Profile", "Profile", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                <div class="modal-body">
+                    <form class="">
+                        <div class="form-group">
+                            <label>Email</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Email" name="email" value="" readonly>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Khoa</label>
+                            <div class="input-group">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Bộ môn</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Nhập bộ môn" name="bomon" value="">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Họ và tên</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Nhập họ và tên" name="name" value="">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary m-t-15 waves-effect">Lưu thông tin</button>
+                            <button type="button" class="btn btn-secondary m-t-15" data-dismiss="modal">Đóng</button>
+                        </div>
+                    </form>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var readURL = function (input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('.profile-pic').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $(".file-upload").on('change', function () {
+            readURL(this);
+        });
+
+        $(".upload-button").on('click', function () {
+            $(".file-upload").click();
+        });
+    });
+</script>
+
