--- a/MonthlyStatement/Areas/Admin/Views/Faculty/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h3 class="text-white" style="font-size:1.75rem">Tài khoản người dùng</h3>
+                        <h3 class="text-white" style="font-size:1.75rem">Quản lý khoa</h3>
                     </div>
                     <div class="card-body">
                         <div class="form-group">
