--- a/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
@@ -1,21 +1,18 @@
-﻿@model IEnumerable<MonthlyStatement.Models.ReportPeriod>
-@using MonthlyStatement.Models
+﻿@model IEnumerable<MonthlyStatement.Models.DepartmentReport>
 
 @{
     int i = 0;
-}
-@{
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Quản lý kỳ báo cáo năm @Model.First().ReportYear.year</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo bộ môn</h4>
 
                     </div>
                     <div class="card-body">
@@ -25,54 +22,42 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="text-center">STT</th>
+                                        <th>Email</th>
                                         <th>Kỳ báo cáo</th>
-                                        <th>Ngày bắt đầu</th>
-                                        <th>Hạn báo cáo</th>
-                                        <th>Ngày kết thúc</th>
+                                        <th>Ngày báo cáo</th>
+                                        <th>Vai trò</th>
                                         <th>Trạng thái</th>
-                                        <th class="text-center"></th>
+                                        <th class="text-center">Thao tác</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
-
                                     {
-                                        i = i + 1;
-
+                                        i++;
                                         <tr class="Search">
                                             <td class="text-center">
                                                 @i
                                             </td>
                                             <td>
-                                                <a href="@Url.Action("FormReports", "ReportPeriods", new {id = item.report_period_id })">@item.report_period_name</a>
+                                                @item.AspNetUser.Email
                                             </td>
                                             <td>
-                                                @item.start_date.Value.ToString("dd/MM/yyyy")
+                                                @item.ReportPeriod.report_period_name
                                             </td>
                                             <td>
-                                                @item.deadline_date.Value.ToString("dd/MM/yyyy")
+                                                Thêm cột ngày báo cáo
                                             </td>
                                             <td>
-                                                @item.end_date.Value.ToString("dd/MM/yyyy")
+                                                @item.AspNetUser.AspNetRoles.First().Name
                                             </td>
+
                                             <td>
-                                                @if (item.start_date <= DateTime.Now && item.deadline_date >= DateTime.Now)
-                                                {
-                                                    <div class="badge badge-success">Đang báo cáo</div>
-                                                }
-                                                else if (item.deadline_date <= DateTime.Now && item.end_date >= DateTime.Now)
-                                                {
-                                                    <div class="badge badge-warning">Trễ hạn báo cáo</div>
-                                                }
-                                                else
-                                                {
-                                                    <div class="badge badge-danger">Không được báo cáo</div>
-                                                }
+                                                <div class="badge badge-success">@item.status</div>
                                             </td>
                                             <td class="text-center">
                                                 <div class="buttons">
-                                                    <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "ReportPeriods", new { id = item.report_period_id })">
-                                                        <i class="far fa-edit"></i>
+                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("Detail","ListReportDepartment", new {id = item.department_report_id})">
+                                                        Xem
                                                     </a>
                                                 </div>
                                             </td>
