--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Index.cshtml
@@ -6,31 +6,19 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Danh sách báo cáo</h4>
-                        <div class="card-header-form">
-                            <form>
-                                <div class="input-group">
-                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo cá nhân</h4>
 
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-striped dataTable no-footer" id="table-1" role="grid" aria-describedby="table-1_info">
+                    </div>
+                    <div class="card-body">
+
+                        <div class="table-responsive">
+                            <table class="table table-striped" id="table-1">
                                 <thead>
                                     <tr role="row">
                                         <th class="text-center">STT</th>
@@ -39,7 +27,7 @@
                                         <th>Ngày báo cáo</th>
                                         <th>Vai trò</th>
                                         <th>Trạng thái</th>
-                                        <th class="text-center"></th>
+                                        <th class="text-center">Thao tác</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -84,3 +72,4 @@
         </div>
     </div>
 </section>
+
