--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             <li class="dropdown">
                                 <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="nav-link" href="#">Bộ môn</a></li>
+                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportDepartment", new { Area = "Admin" })">Bộ môn</a></li>
                                     <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Cá nhân</a></li>
                                 </ul>
                             </li>
